[touch: 1594] Add to header If-Modified-Since
