# public/swagger-ui/api-docs.json
@@ -4,11 +4,10 @@
         "title": "Connfa API",
         "version": "2.0"
     },
-    "host": "",
+    "host": "local.connfa",
     "basePath": "/api/v2",
     "schemes": [
-        "http",
-        "https"
+        "http"
     ],
     "paths": {
         "/getSchedules": {
@@ -23,6 +22,13 @@
                     "application/json"
                 ],
                 "parameters": [
+                    {
+                        "name": "If-Modified-Since",
+                        "in": "header",
+                        "description": "Date, for example: Tue, 4 Apr 2017 09:50:24 +0000",
+                        "required": false,
+                        "type": "string"
+                    },
                     {
                         "name": "codes[]",
                         "in": "query",
@@ -76,7 +82,7 @@
                                     "items": {
                                         "type": "integer",
                                         "format": "int32",
-                                        "example": 1212
+                                        "example": 15
                                     }
                                 }
                             }
